[package]
name = "rlui-core"
description = "The core of the Rlui crate"
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/23Marbles/rlui"
keywords = ["uikit", "terminal", "framework"]
categories = ["command-line-interface"]

[dependencies]
crossterm = "0.29.0"
num-traits = "0.2.19"
