[package]
name = "Rlui"
description = "A rust line editing ui toolkit"
version = "0.1.0-alpha"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/23Marbles/rlui"
keywords = ["uikit", "terminal", "framework", "editor"]
categories = ["command-line-interface"]
readme = "../../README.md"

[dependencies]
rlui-core = "0.1.0-alpha.1"
